# easy

./: .gitignore  .travis.yml  README.md  changelog  regex.cabal  stack-7.8.yaml
Text/: RE.hs
Text/RE/: Capture.lhs  Compendium.hs  PCRE.hs  Parsers.hs  Summa.hs  TDFA.hs  TestBench.lhs  Types.hs
Text/RE/Internal/: Examples.hs  NamedCaptures.lhs  PreludeMacros.hs
Text/RE/PCRE/: ByteString.hs  RE.hs  Sequence.hs  String.hs
Text/RE/PCRE/ByteString/: Lazy.hs
Text/RE/TDFA/: ByteString.hs  RE.hs  Sequence.hs  String.hs  Text.hs
Text/RE/TDFA/ByteString/: Lazy.hs
Text/RE/Tools/: Edit.lhs  Lex.lhs  Sed.lhs
Text/RE/Types/: IsRegex.lhs  Options.lhs  REOptions.lhs  Replace.lhs  SearchReplace.hs
data/: pp-test.lhs
docs/: Edit.html  Lex.html  NamedCaptures.html  Replace.html  Sed.html  TestBench.html  TestKit.html  build-status.md  changelog.html  index.html  index.md  re-gen-cabals.html  re-gen-modules.html  re-nginx-log-processor.html  re-prep.html  re-tests.html  re-tutorial.html  roadmap.html
examples/: TestKit.lhs  re-gen-cabals.lhs  re-gen-modules.lhs  re-include.lhs  re-nginx-log-processor.lhs  re-pp.lhs  re-prep.lhs  re-tests.lhs  re-tutorial-master.lhs  re-tutorial.lhs
lib/: README-regex-examples.md  README-regex.md  mega-regex.cabal  regex-examples.cabal  regex-with-pcre.cabal  regex.cabal
lib/cabal-masters/: library-incl.cabal  regex-examples.cabal  regex-with-pcre.cabal  regex.cabal
lib/md/: build-status.md  roadmap-incl.md
releases/test/: .gitignore  stack.yaml  test-regex-release.cabal
releases/test/src/: test-regex-release.hs
(+1 files in other folders)
